--- a/smsproject/templates/login.html
+++ b/smsproject/templates/login.html
@@ -1,6 +1,36 @@
 {% extends 'index.html' %}
-{% block 'body'%}
-<div align="center">
-    <h1>I am in Login Page</h1>
-</div>
+
+{% block 'body' %}
+<h3 align="center">Admin Login</h3>
+<form>
+    <table align="center">
+        <tr>
+            <td>
+                <label>Enter Username</label>
+            </td>
+            <td>
+                <input type="text" name="uname" required />
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                <label>Enter Password</label>
+            </td>
+            <td>
+                <input type="password" name="pwd" required />
+            </td>
+        </tr>
+
+        <tr align="center">
+            <td>
+                <input type="submit" value="Login" />
+            </td>
+            <td>
+                <input type="reset" value="Clear" />
+            </td>
+        </tr>
+
+    </table>
+</form>
 {% endblock %}
