--- a/smsproject/templates/index.html
+++ b/smsproject/templates/index.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Student Course Management System</title>
+    <link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}"/>
 </head>
 
 <body bgcolor="lightgrey">
